[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Lobby.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="createServerButton" type="Button" parent="."]
margin_left = 443.0
margin_top = 268.0
margin_right = 620.0
margin_bottom = 315.0
rect_pivot_offset = Vector2( 177, 47 )
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="joinServerButton" type="Button" parent="."]
margin_left = 442.0
margin_top = 207.0
margin_right = 619.0
margin_bottom = 254.0
rect_pivot_offset = Vector2( 177, 47 )
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="serverIPLabel" type="Label" parent="."]
margin_left = 351.0
margin_top = 70.0
margin_right = 420.0
margin_bottom = 84.0
text = "IP Address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="serverIPEdit" type="LineEdit" parent="serverIPLabel"]
margin_left = 85.0
margin_top = -19.0
margin_right = 267.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="serverPortLabel" type="Label" parent="."]
margin_left = 393.0
margin_top = 150.0
margin_right = 433.0
margin_bottom = 164.0
text = "Port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="serverPortEdit" type="LineEdit" parent="serverPortLabel"]
margin_left = 44.0
margin_top = -21.0
margin_right = 226.0
margin_bottom = 34.0
